# aseprite-reader

./: README.md  pyproject.toml  requirements.txt
src/aseprite_reader/: __init__.py  aseprite_file.py  chunk.py  composite.py  frame.py  header.py  render.py  utils.py
src/aseprite_reader/chunks/: __init__.py  cel_chunk.py  cel_extra_chunk.py  color_profile_chunk.py  external_files_chunk.py  layer_chunk.py  mask_chunk.py  old_palette_chunk_04.py  old_palette_chunk_11.py  palette_chunk.py  path_chunk.py  slice_chunk.py  tags_chunk.py  tileset_chunk.py  user_data_chunk.py
src/aseprite_reader/models/: __init__.py  external_file.py  palette_color.py  slice_key.py  tag.py
